--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
 
-    <div class="top">
+    <!-- Nav Bar -->
+
+    <div class="topp">
         <div class="pic main"><img
                 src="https://assets.pokemon.com/assets/cms2/img/misc/gus/buttons/logo-pokemon-79x45.png" alt=""></div>
         <div class="pic"><img
@@ -32,48 +34,267 @@
                 alt=""></div>
     </div>
 
-    <nav>
-        <div class="header">
-            <a href="#" class="box one"><span><i class="fa-solid fa-face-smile"></i></span>Home</a>
-            <a href="#" class="box two"><span><i class="fa-solid fa-globe"></i></span>Pokedex</a>
-            <a href="#" class="box three"><span><i class="fa-solid fa-dice"></i></span>Video Games & Apps</a>
-            <a href="#" class="box four"><span><i class="fa-solid fa-chess-board"></i></span>Trading Card Game</a>
-            <a href="#" class="box five"><span><i class="fa-solid fa-circle-play"></i></span>Animation</a>
-            <a href="#" class="box six"><span><i class="fa-solid fa-trophy"></i></span>Play! Pokemon Events</a>
-            <a href="#" class="box seven"><span><i class="fa-solid fa-newspaper"></i></span>News</a>
+    <!-- Header -->
+
+    <div class="header">
+        <a href="#" class="box one"><span><i class="fa-solid fa-face-smile"></i></span>Home</a>
+        <a href="#" class="box two"><span><i class="fa-solid fa-globe"></i></span>Pokedex</a>
+        <a href="#" class="box three"><span><i class="fa-solid fa-dice"></i></span>Video Games & Apps</a>
+        <a href="#" class="box four"><span><i class="fa-solid fa-chess-board"></i></span>Trading Card Game</a>
+        <a href="#" class="box five"><span><i class="fa-solid fa-circle-play"></i></span>Animation</a>
+        <a href="#" class="box six"><span><i class="fa-solid fa-trophy"></i></span>Play! Pokemon Events</a>
+        <a href="#" class="box seven"><span><i class="fa-solid fa-newspaper"></i></span>News</a>
+    </div>
+
+    <!-- Cards Container -->
+
+    <div class="contain">
+        <div class="left first">
+            <img src="./Cards Images/1.png" alt="">
+            <h1>Temporal Forces, Heavenly Artwork</h1>
+            <p>Pokémon TCG: Scarlet & Violet—Temporal Forces boasts Pokémon ex, ACE SPEC cards, and more.</p>
         </div>
-    </nav>
-<div class="contain">
-    <div class="left first">
-        <img src="./1.png" alt="">
-        <h1>Temporal Forces, Heavenly Artwork</h1>
-        <p>Pokémon TCG: Scarlet & Violet—Temporal Forces boasts Pokémon ex, ACE SPEC cards, and more.</p>
+
+        <div class="right containerfirst">
+            <img src="./Cards Images/2.png" alt="">
+            <h1>Scarlet & Violet- <i>Temporal Forces</i>Build & Battle Box</h1>
+        </div>
+
+        <div class="right containersecond">
+            <img src="./Cards Images/3.png" alt="">
+            <h1>Blastoise Stands Strong in 7-Star Tera Raid Battles</h1>
+        </div>
+        <div class="right containerthird">
+            <img src="./Cards Images/4.png" alt="">
+            <h1>Catch Elusive Pokémon in The Indigo Disk</h1>
+        </div>
+
+        <div class="left second">
+            <img src="./Cards Images/5.png" alt="">
+            <h1>It's Time to Go <i>Beyond</i> the <i>Pokédex</i> to Learn about Lucario</h1>
+        </div>
+
+        <div class="left third">
+            <img src="./Cards Images/6.png" alt="">
+            <h1>Pokémon GO World of Wonders Trainer Battle Updates</h1>
+        </div>
     </div>
 
-    <div class="right containerfirst">
-        <img src="./2.png" alt="">
-        <h1>Scarlet & Violet- <i>Temporal Forces</i>Build & Battle Box</h1>
+
+    <!-- Second Container -->
+
+    <div class="sticker">
+        <h1>Featured Pokemon</h1>
+    </div>
+    <div class="secondcontainer">
+
+        <div class="firstcard">
+            <img src="./Second Container Images/1.png" alt="">
+            <h2>Quagsire</h2>
+        </div>
+
+        <div class="secondcard">
+
+            <img src="./Second Container Images/2.png" alt="">
+            <h2>Oranguru</h2>
+        </div>
+
+        <div class="thirdcard">
+            <img src="./Second Container Images/3.png" alt="">
+            <h2 class="middlediv">Jolteon</h2>
+            <ul>
+                <li class="leftside">Type</li>
+                <li class="rightside"><button class="but">Water</button><button class="butt">Ground</button></li>
+            </ul>
+            <ul>
+                <li class="leftsidesec">Abilities</li>
+                <li class="rightside">Torrent</li>
+            </ul>
+        </div>
+
+        <div class="fourthcard">
+            <img src="./Second Container Images/4.png" alt="">
+            <h2>Wishiwashi</h2>
+        </div>
+
+        <div class="fifthcard">
+            <img src="./Second Container Images/5.png" alt="">
+            <h2>Typhlosion</h2>
+        </div>
     </div>
 
-    <div class="right containersecond">
-        <img src="./3.png" alt="">
-        <h1>Blastoise Stands Strong in 7-Star Tera Raid Battles</h1>
-    </div>
-    <div class="right containerthird">
-        <img src="./4.png" alt="">
-        <h1>Catch Elusive Pokémon in The Indigo Disk</h1>
-    </div>
 
-    <div class="left second">
-        <img src="./5.png" alt="">
-        <h1>It's Time to Go <i>Beyond</i> the <i>Pokédex</i> to Learn about Lucario</h1>
-    </div>
-
-    <div class="left third">
-        <img src="./6.png" alt="">
-        <h1>Pokémon GO World of Wonders Trainer Battle Updates</h1>
-    </div>
+    <!-- Explore Button -->
+<div class="explorebutton">
+    <button class="explore">Explore More Pokemon</button>
 </div>
+
+
+    <!-- Third Container -->
+
+    <div class="lastdiv">
+        <div class="cardone top">
+            <img src="./Third Container/1.jpg" alt="">
+            <h3>Add Some Spark to Your Teams in Pokémon Sleep</h3>
+            <p>Level up your Pokémon with Mini Candy Boost, befriend Electric-type Pokémon, and more during
+                Pokémon Sleep's Electric Type Week.</p>
+        </div>
+
+        <div class="cardtwo top">
+            <img src="./Third Container/2.gif" alt="">
+            <h3>Team Up with New Sync Pairs and Snap Some Pics during This Special Celebration</h3>
+            <p>The Pokémon Masters EX 4.5 Year Celebration showcases new sync pairs, bonuses, and a brand-new
+                photo creator feature.</p>
+        </div>
+
+        <div class="cardthree top">
+
+            <img src="./Third Container/3.png" alt="">
+            <h3>See All the Latest News from the Pokémon Day 2024 Pokémon Presents</h3>
+            <p>Learn about the upcoming Pokémon Legends: Z-A and Pokémon Trading Card Game Pocket along with
+                even more updates.</p>
+        </div>
+
+        <div class="centerpart">
+            <h1 id="h5">What's New This <br>Week</h1>
+        </div>
+
+        <div class="cardfour bottom">
+            <img src="./Third Container/4.png" alt="">
+            <h3>New Horizons in Pokémon GO</h3>
+            <p>Celebrate Pokémon Horizons: The Series with the debut of Charcadet and Pikachu wearing Cap’s hat.
+            </p>
+        </div>
+
+        <div class="cardfive bottom">
+            <img src="./Third Container/5.png" alt="">
+            <h3>A New Legend Is about to Begin</h3>
+            <p>Pokémon Legends: Z-A, an upcoming adventure set within Lumiose City, will launch on Nintendo
+                Switch in 2025.</p>
+        </div>
+        <div class="cardsix bottom">
+            <img src="./Third Container/6.png" alt="">
+            <h3>Miraidon Electrifies Pokémon UNITE this Pokémon Day</h3>
+            <p>Celebrate Pokémon Day in Pokémon UNITE by completing missions to get Miraidon's Unite license
+                during the Miraidon's Sandwich Challenge event.</p>
+        </div>
+
+        <div class="cardseventh">
+            <div class="cardseven bottom">
+                <h4>View All News</h4>
+            </div>
+            <div class="news">
+                <p>Keep up with all the latest developments!</p>
+            </div>
+        </div>
+
+
+        <!-- Footer -->
+        <div class="footer">
+
+            <!-- Form Div -->
+            <div class="firstform">
+                <div class="form">
+                    <h3 id="footerheading">
+                        Sign up for Pokémon emails!
+                    </h3>
+                    <input class="data" type="text" placeholder="Email" size="40px" required>
+                    <br>
+                    <select name="Countryname" id="country">
+                        <option value="country">United States</option>
+                        <option value="country">Pakistan</option>
+                        <option value="country">India</option>
+                        <option value="country">Iran</option>
+                    </select>
+                    <input class="data" type="date" id="birthdate" placeholder="Birthday">
+                    <br>
+                    <button id="butn">SIGN UP</button>
+
+                    <!-- Check Box Div -->
+                    <div class="checkbox">
+                        <div class="heads">
+                            <h4>I'd like to receive emails about:</h4>
+                        </div>
+                        <div class="check">
+                            <label class="cb" for="checkbox">
+                                <input class="chb" type="checkbox" checked>Pokémon video games, apps, and more
+                            </label>
+                        </div>
+
+                        <div class="check">
+                            <label class="cb" for="checkbox">
+                                <input class="chb" type="checkbox" checked>Pokémon Center (our official online shop)
+                            </label>
+                        </div>
+
+                        <div class="check">
+                            <label class="cb" for="checkbox">
+                                <input class="checkb" type="checkbox">
+                                I accept the Pokemon.com Terms of Use and Privacy Policy.
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- bottom Part -->
+
+        <div class="lastpart">
+            <div class="firstportion">
+                <h3 id="personal-links">The Pokémon Company</h3>
+                <p id="links">
+                    <a href="#">News</a>
+                    <br>
+                    <a href="#">Parents Guide</a>
+                    <br>
+                    <a href="#">Customer Service</a>
+                    <br>
+                    <a href="#">About Our Company</a>
+                    <br>
+                    <a href="#">Careers</a>
+                    <br>
+                    <a href="#">Select a Country/Region </a>
+                    <br>
+                    <a href="#">Press Site</a>
+                    <br>
+                </p>
+            </div>
+
+            <div class="vertical-line"></div>
+
+            <div class="secondportion">
+                <div class="socialmedia">
+                    <span id="facebook"><img src="./Social Media/FB.png" alt=""></span>
+                    <span id="youtube"><img src="./Social Media/YT.png" alt=""></span>
+                    <span id="twitter"><img src="./Social Media/Twitter.png" alt=""></span>
+                    <span id="insta"><img src="./Social Media/IG.png" alt=""></span>
+                    <span id="pinterest"><img src="./Social Media/PT.png" alt=""></span>
+                </div>
+            </div>
+
+            <div class="secvertical-line"></div>
+
+            <div class="thirdportion">
+                <div class="other">
+                    <img src="./Social Media/Caru.PNG" alt="" class="med">
+                    <p id="otherlink">
+                        <a href="">Terms of Use</a><br>
+                        <a href="">Privacy Notice</a><br>
+                        <a href="">Cookies Page</a><br>
+                        <a href="">Legal Info</a><br>
+                        <a href="">Security</a>
+                        <br>
+                    <h6>©2024 Pokémon. ©1995 - 2024 <br>Nintendo/Creatures Inc./GAME FREAK inc. TM, <br> ®Nintendo.</h6>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    </div>
+
 
 </body>
 
